--- a/WebShop.WebUI/Views/Home/Index.cshtml
+++ b/WebShop.WebUI/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
 										</div>
 									</li>
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */ }
-									@for(int i = 0; i < 4; i++)
+									@for(int i = 1; i <= 4; i++)
                                     {
 										<li class="span3">
                                             <div class="product-box">
@@ -68,7 +68,7 @@
 							<div class="item">
 								<ul class="thumbnails">
 @{ /* Suggested Products (4 products) * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */ }
-									@for(int i = 4; i < 8; i++)
+									@for(int i = 5; i <= 8; i++)
                                     {
 										<li class="span3">
                                             <div class="product-box">
