--- a/WebShop.WebUI/Views/ProductManager/Edit.cshtml
+++ b/WebShop.WebUI/Views/ProductManager/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit","ProductManager",FormMethod.Post,new { encType="multipart/form-data" } ))
 {
     @Html.AntiForgeryToken()
     
@@ -93,6 +93,31 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Colour, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Colour, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2" for="Colour">Main Image</label>
+            <div class="col-md-10">
+                <input type="file" id="file" name="file" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2" for="Colour">Image 2</label>
+            <div class="col-md-10">
+                <input type="file" id="file2" name="file2" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2" for="Colour">Image 3</label>
+            <div class="col-md-10">
+                <input type="file" id="file3" name="file3" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2" for="Colour">Image 4</label>
+            <div class="col-md-10">
+                <input type="file" id="file4" name="file4" class="form-control" />
             </div>
         </div>
 
