--- a/WebShop.WebUI/Views/Manage/ChangePassword.cshtml
+++ b/WebShop.WebUI/Views/Manage/ChangePassword.cshtml
@@ -2,10 +2,14 @@
 @{
     ViewBag.Title = "Change Password";
 }
+<section class="header_text sub">
+    <img class="pageBanner" src="~/Content/images/banner/pageBanner.png" alt="New products">
+
+</section>
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-stacked", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Change Password Form</h4>
@@ -31,7 +35,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+            <input type="submit" value="Change password" class="btn btn-success" />
         </div>
     </div>
 }
