--- a/WebShop.WebUI/Views/Basket/Index.cshtml
+++ b/WebShop.WebUI/Views/Basket/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebShop.Core.ViewModels.BasketItemViewModel>
+﻿@model WebShop.Core.ViewModels.BasketItemViewModel
 
 @{
     ViewBag.Title = "Basket";
@@ -24,16 +24,58 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model)
+                    @foreach (var item in Model.BasketItemDetail)
                     {
                         <tr>
                             <td><a href="@Url.Action("RemoveFromBasket", "Basket", new { Id=item.Id })" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a></td>
-                            <td><a href="/ProductDetails/index/@item.Id"><img  class="img-thumbnail" alt="" width="50px" src="@item.Image"></a></td>
+                            <td><a href="/ProductDetails/index/@item.ProdctId"><img class="img-thumbnail" alt="" width="50px" src="@item.Image"></a></td>
                             <td>@item.ProdctName</td>
-                            <td><input type="text" placeholder="@item.Quantity" class="input-mini"></td>
+                            <td>
+                                <div class="input-group">
+                                    <a href="@Url.Action("ReduceQuantity","Basket", new { Id=item.Id})" type="button" class="btn btn-danger btn-number">
+                                        <i class="fas fa-minus"></i>
+                                    </a>
+                                    <input type="text" placeholder="@item.Quantity" class="input-mini" style="margin:0" readonly>
+                                    <a href="@Url.Action("IncreaseQuantity","Basket", new {Id=item.Id})" type="button" class="btn btn-success">
+                                        <i class="fas fa-plus"></i>
+                                    </a>
+                                </div>
+
+                            </td>
                             <td>@item.Price Kr</td>
                             <td>@(@item.Price * @item.Quantity) Kr</td>
                         </tr>
+                    }
+                    @if (Model.DiscountItem != null)
+                    {
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>@Model.DiscountItem.CouponName</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>-@Model.DiscountItem.Price Kr</td>
+                        </tr>
+                    }
+                    @if (Model.DeliveryMethod.Price != 0)
+                    {
+                        <tr>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>@Model.DeliveryMethod.Delivery Shipping</td>
+                            <td>&nbsp;</td>
+                            <td>&nbsp;</td>
+                            <td>@Model.DeliveryMethod.Price Kr</td>
+                        </tr>
+                    }
+                    @{
+                        var total = (from p in Model.BasketItemDetail select p.Price * p.Quantity).Sum();
+                        if (Model.DiscountItem != null)
+                        {
+                            total -= Model.DiscountItem.Price;
+                        }
+                        total += Model.DeliveryMethod.Price;
+
                     }
                     <tr>
                         <td>&nbsp;</td>
@@ -41,111 +83,58 @@
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
                         <td>&nbsp;</td>
-                        <td><strong>@String.Format("{0:#.00}", (from p in Model select p.Price * p.Quantity).Sum()) Kr</strong></td>
+                        <td><strong>@String.Format("{0:#.00}", total) Kr</strong></td>
                     </tr>
                 </tbody>
             </table>
             <h4>What would you like to do next?</h4>
             <p>Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
-            <label class="radio">
-                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
-                Use Coupon Code
-            </label>
-            <label class="radio">
-                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                Estimate Shipping &amp; Taxes
-            </label>
-            <hr>
-            <p class="cart-total right">
-                <strong>Sub-Total</strong>:	$100.00<br>
-                <strong>Eco Tax (-2.00)</strong>: $2.00<br>
-                <strong>VAT (17.5%)</strong>: $17.50<br>
-                <strong>Total</strong>: $119.50<br>
-            </p>
-            <hr />
-            <p class="buttons center">
-                <button class="btn" type="button">Update</button>
-                <button class="btn" type="button">Continue</button>
-                <button class="btn btn-inverse" type="submit" id="checkout">Checkout</button>
-            </p>
-        </div>
-        <div class="span3 col">
-            <div class="block">
-                <ul class="nav nav-list">
-                    <li class="nav-header">SUB CATEGORIES</li>
-                    <li><a href="products.html">Nullam semper elementum</a></li>
-                    <li class="active"><a href="products.html">Phasellus ultricies</a></li>
-                    <li><a href="products.html">Donec laoreet dui</a></li>
-                    <li><a href="products.html">Nullam semper elementum</a></li>
-                    <li><a href="products.html">Phasellus ultricies</a></li>
-                    <li><a href="products.html">Donec laoreet dui</a></li>
-                </ul>
-                <br />
-                <ul class="nav nav-list below">
-                    <li class="nav-header">MANUFACTURES</li>
-                    <li><a href="products.html">Adidas</a></li>
-                    <li><a href="products.html">Nike</a></li>
-                    <li><a href="products.html">Dunlop</a></li>
-                    <li><a href="products.html">Yamaha</a></li>
-                </ul>
-            </div>
-            <div class="block">
-                <h4 class="title">
-                    <span class="pull-left"><span class="text">Randomize</span></span>
-                    <span class="pull-right">
-                        <a class="left button" href="#myCarousel" data-slide="prev"></a><a class="right button" href="#myCarousel" data-slide="next"></a>
-                    </span>
-                </h4>
-                <div id="myCarousel" class="carousel slide">
-                    <div class="carousel-inner">
-                        <div class="active item">
-                            <ul class="thumbnails listing-products">
-                                <li class="span3">
-                                    <div class="product-box">
-                                        <span class="sale_tag"></span>
-                                        <a href="product_detail.html"><img alt="" src="themes/images/ladies/2.jpg"></a><br />
-                                        <a href="product_detail.html" class="title">Fusce id molestie massa</a><br />
-                                        <a href="#" class="category">Suspendisse aliquet</a>
-                                        <p class="price">$261</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="item">
-                            <ul class="thumbnails listing-products">
-                                <li class="span3">
-                                    <div class="product-box">
-                                        <a href="product_detail.html"><img alt="" src="themes/images/ladies/4.jpg"></a><br />
-                                        <a href="product_detail.html" class="title">Tempor sem sodales</a><br />
-                                        <a href="#" class="category">Urna nec lectus mollis</a>
-                                        <p class="price">$134</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
+
+            @*adding coupon*@
+            @using (Html.BeginForm("AddCoupon", "Basket", FormMethod.Post))
+            {
+                @Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="row">
+                    <div class="span8">
+                        <label>Use Coupon Code:</label>
+                        @Html.TextBox("coupon", null, new { style = "margin:0" })
+                        <button class="btn" type="submit">Apply/Remove Coupon</button>
                     </div>
+
                 </div>
+
+            }
+            @using (Html.BeginForm("SetDelivery", "Basket", FormMethod.Post))
+            {
+                var delivery = "Store";
+                if (Model.DeliveryMethod != null)
+                {
+                    delivery = Model.DeliveryMethod.Delivery;
+                }
+                @Html.AntiForgeryToken()
+                <label class="radio"> @Html.RadioButton("Delivery", "Store", delivery == "Store") Deliver to store(0 Kr) </label>
+                <label class="radio"> @Html.RadioButton("Delivery", "Postnord", delivery == "Postnord") Deliver by Postnord(0 Kr) </label>
+                <label class="radio"> @Html.RadioButton("Delivery", "Home", delivery == "Home") Deliver by post to Home (30 Kr) </label>
+                <label class="radio"> @Html.RadioButton("Delivery", "Express", delivery == "Express") Express delivery (50 Kr) </label>
+                    <button class="btn" type="submit">Change Delivery method</button>
+                    }
+
+                    <p class="cart-total right">
+                        <strong>Eco Tax (-2.00):</strong> @String.Format("{0:#.00}", (total * 2) / 100) Kr<br>
+                        <strong>VAT (17%):</strong> @String.Format("{0:#.00}", (total * 17) / 100) Kr<br>
+                        <strong>Total:</strong> @String.Format("{0:#.00}", total) Kr<br>
+                    </p>
+                    <hr />
+                    <p class="buttons center">
+                        @*<button class="btn" type="button">Update</button>*@
+                        <a href="/Product/Index" class="btn" type="button">Continue shopping</a>
+                        <button class="btn btn-inverse" type="submit" id="checkout">Checkout</button>
+                    </p>
             </div>
-        </div>
+        @{
+            Html.RenderAction("ProductFilter", "ProductDetails");
+        }
     </div>
 </section>
 
-@*<p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-    <table class="table">
-        <tr>
-            <th></th>
-        </tr>
-
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-    }
-
-    </table>*@
